--- a/emailjs-template.html
+++ b/emailjs-template.html
@@ -12,80 +12,214 @@
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            overflow: hidden;
         }
         .header {
             text-align: center;
-            padding: 20px 0;
-            background-color: #f8f9fa;
-            border-radius: 8px;
-            margin-bottom: 20px;
+            padding: 30px 20px;
+            background-color: #4CAF50;
+            color: white;
         }
-        .order-details {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .order-item {
-            padding: 10px 0;
-            border-bottom: 1px solid #eee;
-        }
-        .order-total {
-            margin-top: 20px;
-            padding-top: 20px;
-            border-top: 2px solid #eee;
+        .header h1 {
+            margin: 0;
+            font-size: 24px;
             font-weight: bold;
         }
-        .customer-service {
-            margin-top: 30px;
-            padding: 15px;
+        .header p {
+            margin: 10px 0 0;
+            font-size: 16px;
+            opacity: 0.9;
+        }
+        .content {
+            padding: 30px;
+        }
+        .order-info {
             background-color: #f8f9fa;
             border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .order-info h2 {
+            margin: 0 0 15px;
+            font-size: 18px;
+            color: #2c3e50;
+        }
+        .info-row {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #eee;
+        }
+        .info-row:last-child {
+            border-bottom: none;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+        .info-label {
+            font-weight: bold;
+            color: #666;
+        }
+        .info-value {
+            color: #333;
+        }
+        .order-items {
+            margin: 20px 0;
+        }
+        .order-item {
+            display: flex;
+            align-items: center;
+            padding: 15px;
+            background-color: #fff;
+            border: 1px solid #eee;
+            border-radius: 8px;
+            margin-bottom: 10px;
+        }
+        .order-item img {
+            width: 60px;
+            height: 60px;
+            object-fit: cover;
+            border-radius: 6px;
+            margin-left: 15px;
+        }
+        .item-details {
+            flex-grow: 1;
+        }
+        .item-name {
+            font-weight: bold;
+            margin: 0 0 5px;
+            color: #2c3e50;
+        }
+        .item-meta {
+            color: #666;
+            font-size: 14px;
+            margin: 0;
+        }
+        .order-summary {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            padding: 20px;
+            margin-top: 20px;
+        }
+        .summary-row {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .summary-row.total {
+            font-weight: bold;
+            font-size: 18px;
+            color: #2c3e50;
+            border-top: 2px solid #eee;
+            padding-top: 10px;
+            margin-top: 10px;
+        }
+        .customer-service {
             text-align: center;
+            padding: 30px 20px;
+            background-color: #f8f9fa;
+            border-top: 1px solid #eee;
+        }
+        .customer-service h3 {
+            margin: 0 0 15px;
+            color: #2c3e50;
         }
         .button {
             display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
+            padding: 12px 24px;
+            background-color: #4CAF50;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
+            border-radius: 6px;
+            font-weight: bold;
+            margin-top: 15px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .footer {
+            text-align: center;
+            padding: 20px;
+            color: #666;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>شكراً لطلبك!</h1>
-        <p>مرحباً {{to_name}}،</p>
-        <p>تم استلام طلبك بنجاح</p>
-    </div>
-
-    <div class="order-details">
-        <h2>تفاصيل الطلب</h2>
-        <p><strong>رقم الطلب:</strong> {{order_id}}</p>
-        <p><strong>تاريخ الطلب:</strong> {{order_date}}</p>
-        <p><strong>حالة الطلب:</strong> {{order_status}}</p>
-        
-        <h3>المنتجات المطلوبة:</h3>
-        <div class="order-items">
-            {{order_items}}
-        </div>
-        
-        <div class="order-total">
-            <p>المجموع: {{order_total}} د.ل</p>
+    <div class="container">
+        <div class="header">
+            <h1>شكراً لطلبك!</h1>
+            <p>مرحباً {{customer_name}}،</p>
+            <p>تم استلام طلبك بنجاح</p>
         </div>
 
-        <h3>معلومات التوصيل:</h3>
-        <p><strong>العنوان:</strong> {{delivery_address}}</p>
-        <p><strong>رقم الهاتف:</strong> {{customer_phone}}</p>
-    </div>
+        <div class="content">
+            <div class="order-info">
+                <h2>تفاصيل الطلب</h2>
+                <div class="info-row">
+                    <span class="info-label">رقم الطلب:</span>
+                    <span class="info-value">#{{order_id}}</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">تاريخ الطلب:</span>
+                    <span class="info-value">{{order_date}}</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">حالة الطلب:</span>
+                    <span class="info-value">{{order_status}}</span>
+                </div>
+            </div>
 
-    <div class="customer-service">
-        <h3>هل لديك استفسار؟</h3>
-        <p>يمكنك التواصل مع خدمة العملاء على:</p>
-        <p><strong>{{customer_service_phone}}</strong></p>
-        <a href="tel:{{customer_service_phone}}" class="button">اتصل بنا</a>
+            <div class="order-items">
+                <h2>المنتجات المطلوبة</h2>
+                {{{items_html}}}
+            </div>
+
+            <div class="order-summary">
+                <div class="summary-row">
+                    <span>المجموع الفرعي:</span>
+                    <span>{{subtotal_amount}} {{currency}}</span>
+                </div>
+                <div class="summary-row">
+                    <span>رسوم التوصيل:</span>
+                    <span>{{delivery_fee}} {{currency}}</span>
+                </div>
+                <div class="summary-row total">
+                    <span>المجموع الكلي:</span>
+                    <span>{{order_total}} {{currency}}</span>
+                </div>
+            </div>
+
+            <div class="order-info">
+                <h2>معلومات التوصيل</h2>
+                <div class="info-row">
+                    <span class="info-label">العنوان:</span>
+                    <span class="info-value">{{delivery_address}}</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">رقم الهاتف:</span>
+                    <span class="info-value">{{phone_number}}</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="customer-service">
+            <h3>هل لديك استفسار؟</h3>
+            <p>يمكنك التواصل مع خدمة العملاء على:</p>
+            <p><strong>{{customer_service_phone}}</strong></p>
+            <a href="tel:{{customer_service_phone}}" class="button">اتصل بنا</a>
+        </div>
+
+        <div class="footer">
+            <p>© {{current_year}} {{shop_name}} - جميع الحقوق محفوظة</p>
+        </div>
     </div>
 </body>
 </html> 
